--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,10 +19,13 @@ header {
   display: flex;
   background-color: darkgrey;
   align-content: center;
+  align-items: center;
+  max-height: 100px;
 }
 
 #logo-icon {
-  padding-left: 2%;
+  padding-left: 8%;
+  align-self: center;
 }
 
 #search-input {
@@ -31,16 +34,51 @@ header {
   min-width: 25%;
   align-self: center;
   box-shadow: 1px 1px 4px 0 rgba(94, 94, 94, 0.91);
-
+  border-radius: 25px;
 }
 
 #search-btn {
   display: block;
-  height: 45px;
+  height: 30px;
   margin-left: 20px;
   align-self: center;
-  border-end-end-radius: 25%;
-  border-top-left-radius: 25%;
+  border-radius: 75px;
   box-shadow: 2px 2px 8px 0 rgba(94, 94, 94, 0.91);
 
+}
+
+#accountInfo{
+  margin-left: 5%;
+  min-width: 25%;
+  align-self: center;
+  align-items: center;
+  display: flex;
+}
+
+#btn-separator{
+padding-left: 5%;
+padding-right: 5%;
+
+}
+
+#login-btn{
+  align-self: center;
+  cursor: pointer;
+}
+
+#register-btn{
+  align-self: center;
+  cursor: pointer;
+}
+
+#account-btn{
+  margin-left: 5%;
+  margin-right: 5%;
+  min-width: 50%;
+  align-self: center;
+  display: flex;
+}
+
+#profile-img{
+  max-width: 50px;
 }
