--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,17 +7,18 @@
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-	height: 10rem;
+	height: 10vw;
 }
 
 .LogoA {
+	margin-left: -0.5vw;
 	align-self: center;
 }
 
 .LogoIcon {
 	display: block;
 	align-self: center;
-	height: 7rem;
+	height: 2.5vw;
 }
 
 .SearchContainer {
@@ -28,7 +29,7 @@
 
 .SearchInput {
 	width: 30vw;
-	height: 2.5rem;
+	height: 2.5vw;
 	align-self: center;
 	margin-right: 0.5vw;
 	border-radius: 10px;
@@ -39,8 +40,8 @@
 .SearchBtn {
 	background-color: lightgray;
 	display: block;
-	width: 5rem;
-	height: 2.5rem;
+	width: 5vw;
+	height: 2.5vw;
 	align-self: center;
 	margin-left: 0.5vw;
 	border-radius: 10px;
@@ -57,7 +58,7 @@
 	min-width: 100vw;
 	max-width: 100vw;
 
-	height: 7rem;
+	height: 7vw;
 	text-align: center;
 	justify-content: center;
 	align-content: center;
@@ -76,7 +77,7 @@
 	align-items: stretch;
 	min-width: 100%;
 	flex-direction: row;
-	height: 3rem;
+	height: 3vw;
 }
 
 .NavBarUl {
