--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -5,6 +5,7 @@
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
+    margin: 1vw;
 }
 
 .ProductCase:hover {
@@ -14,8 +15,8 @@
 }
 
 .ProductImage {
-    width: 10.25rem;
-    height: 10.25rem;
+    width: 10.3rem;
+    height: 10.3rem;
     min-height: 10.25rem;
     min-width: 10.25rem;
 }
@@ -26,7 +27,7 @@
     font-weight: 600;
     margin-top: 1rem;
     min-height: 1.2rem;
-    
+
 }
 
 .ProductPromotion {
@@ -51,4 +52,11 @@
     font-weight: 700;
     height: 3rem;
     border-radius: 0px 0px 9px 9px;
+}
+
+.ProductRollCase {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 2vw;
 }
