--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -60,8 +60,8 @@
 
 .UpperSideHeader {
 	display: flex;
-	min-width: 100vw;
-	max-width: 100vw;
+	min-width: 100%;
+	max-width: 100%;
 
 	height: 7vw;
 	text-align: center;
