--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -68,6 +68,8 @@
 	justify-content: center;
 	align-content: center;
 	align-items: center;
+	padding-left: 11vw;
+	padding-right: 11vw;
 }
 
 .NavBar {
