--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,38 +1,49 @@
 .ProductCase {
-    border: 1px solid grey;
+    /* border: 1px solid black; */
     width: 15vw;
-    height: 20.45vw;
+    height: 24.5vw;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 4px 10px 1px rgba(140, 140, 140, 1);
 }
 
 .ProductCase:hover {
 
     box-shadow: 0 4px 10px 1px rgba(140, 140, 140, 1);
+    transform: translateY(-5px);
+    transition-duration: .5s;
 }
 
 .ProductImage {
-    width: 10.25vw;
-    height: 10.25vw;
-    min-height: 10.25vw;
-    min-width: 10.25vw;
+    width: 12vw;
+    height: 12vw;
+    min-height: 12vw;
+    min-width: 12vw;
+    margin-top: 1.5vw;
 }
 
 .ProductName {
     font-size: 1vw;
     line-height: 1.125vw;
     font-weight: 600;
-    margin-top: 1vw;
-    min-height: 1.2vw;
-
+    margin-top: 0.5vw;
+    min-height: 2.4vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .ProductPromotion {
+    font-size: 1vw;
     margin-top: 1vw;
-    padding-left: 3.35vw;
+    padding-left: 1vw;
     text-align: left;
-    min-height: 1.5vw;
+    min-height: 1.3vw;
 
 }
 
@@ -44,11 +55,12 @@
 }
 
 .ProductBuyButton {
+    margin-top: 0.4vw;
     background-color: darkgrey;
     font-size: 1vw;
     line-height: 3vw;
     font-weight: 700;
-    height: 3vw;
+    height: 3.1vw;
     border-radius: 0px 0px 9px 9px;
 }
 
