--- a/styles/InfinityLoading.module.css
+++ b/styles/InfinityLoading.module.css
@@ -12,9 +12,9 @@
 }
 
 .Loader {
-    animation: is-rotating 1s infinite;
-    width: 50px;
-    height: 50px;
+    animation: is-rotating 1s linear infinite;
+    width: 3rem;
+    height: 3rem;
     border-radius: 100%;
     border: 6px solid #e5e5e5;
     border-top-color: lightslategray;
