--- a/styles/Produto.module.css
+++ b/styles/Produto.module.css
@@ -3,20 +3,17 @@
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
-    margin-top: 1vw;
+    margin-top: 1.5vw;
 }
 
 .Form {
     display: flex;
     flex-direction: column;
-    border: 1px solid;
     align-self: center;
     justify-content: center;
     align-items: center;
     align-content: center;
-    max-width: 25vw;
-    background-color: rgb(165, 165, 165);
-    border-radius: 25px;
+    max-width: 35vw;
 }
 
 .ProfileImg {
@@ -25,6 +22,16 @@
 
 .Label {
     align-self: left;
+    font-size: 1.4vw;
+}
+
+.LabelCifra{
+    font-size: 1.2vw;
+    background-color: darkgray;
+    border-radius: 5px 0px 0px 5px;
+    height:2.5vw;
+    align-items: baseline;
+    padding:0.3vw;
 }
 
 .InputBox {
@@ -37,8 +44,16 @@
     padding-right: 1vw;
 }
 
+.InputMonetary{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .Input {
-    width: 30vw;
+    width: 40vw;
     height: 2.5vw;
     align-self: center;
     border-radius: 5px;
@@ -47,7 +62,14 @@
     max-width: 100%;
     max-height: 100%;
 }
-
+.InputDescription{
+    width: 40vw;
+    max-width: 100%;
+    border-radius: 5px;
+    border-style: none;
+    font-size: 1.3vw;
+    resize: none;
+}
 .InputImage {
     width: 30vw;
     height: 2.5vw;
