--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -6,43 +6,77 @@
     height: 100%;
 }
 
+.Product {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
 .Container {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-around;
-    margin-top: 4vw;
+    justify-content: space-between;
+    padding-left: 15vw;
+    padding-right: 15vw;
+}
+
+.UpperContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    justify-content: space-between;
+    padding-left: 15vw;
+    padding-right: 15vw;
 }
 
 .ImageContainer {
-    width: 100%;
     text-align: center;
 }
 
 .Image {
     width: 30vw;
     height: 30vw;
-    margin-left: 10vw;
 }
 
 .InfoContainer {
     width: 100%;
-    margin-left: 15vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    padding: 10vw;
+    padding-bottom: 0;
+    padding-top: 0;
 }
 
 .Name {
     font-size: 2vw;
+    margin-bottom: 0;
+}
+
+.CurrencyContainer {
+    width: 100%;
 }
 
 .Promotion {
+    font-size: 1.5vw;
     margin: 0px;
+    text-decoration-line: line-through;
 }
 
 .Price {
+    font-size: 3.5vw;
     margin: 0px;
+}
+
+.DescriptionContainer {
+    margin-left: 15vw;
+    margin-right: 15vw;
+    margin-bottom: 10vw;
 }
 
 .Description {
@@ -50,5 +84,139 @@
 }
 
 .Buy {
-    background-color: bisque;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15vw;
+    height: 5vw;
+    font-size: 1.7vw;
+    align-self: center;
+    border-radius: 5px;
+    border-style: none;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    font-weight: 600;
+}
+
+.Buy:hover {
+    background-color: lightgray;
+
+}
+
+.Controls {
+    display: flex;
+    align-items: flex-end;
+}
+
+.DropButton {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+
+.DropButton img {
+    width: 1.5vw;
+    height: 1.5vw;
+}
+
+.Dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.DropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.DropdownContent a {
+    cursor: pointer;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.DropdownContent a:hover {
+    background-color: #f1f1f1
+}
+
+.Dropdown:hover .DropdownContent {
+    display: block;
+}
+
+
+.DeleteModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.DeleteModalContent {
+    background-color: #fefefe;
+    margin: 15% auto;
+    border: 1px solid #888;
+    width: 25vw;
+}
+
+.DeleteModalContent p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vw;
+}
+
+.DeleteModalContent a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5vw;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.Buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 3vw;
+
+}
+
+.Close {
+    color: #aaa;
+    float: right;
+    font-size: 2.5vw;
+    font-weight: bold;
+    cursor: pointer;
+    margin-right: 01vw;
+}
+
+.Confirmar {
+    background-color: rgb(255, 121, 121);
+}
+
+.Cancelar {
+    background-color: rgb(121, 255, 121);
+}
+
+.Confirmar:hover {
+    background-color: red;
+}
+
+.Cancelar:hover {
+    background-color: green;
 }
