--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -48,7 +48,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10vw;
+    padding-left: 10vw;
     padding-bottom: 0;
     padding-top: 0;
 }
@@ -59,7 +59,7 @@
 }
 
 .CurrencyContainer {
-    width: 100%;
+    width: 40vw;
 }
 
 .Promotion {
@@ -95,8 +95,9 @@
     align-self: center;
     border-radius: 5px;
     border-style: none;
-    margin-top: 1vw;
+    margin-top: 5vw;
     margin-bottom: 1vw;
+    margin-right: 10vw;
     font-weight: 600;
 }
 
