--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -44,7 +44,7 @@
     padding-left: 1vw;
     text-align: left;
     min-height: 1.3vw;
-
+    text-decoration-line: line-through;
 }
 
 .ProductPrice {
