--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -2,7 +2,7 @@
 .Header {
 	display: flex;
 	flex-direction: column;
-	background-color: darkgrey;
+	background-color: #23486e;
 	text-align: center;
 	justify-content: center;
 	align-content: center;
@@ -63,7 +63,6 @@
 	display: flex;
 	min-width: 100%;
 	max-width: 100%;
-
 	height: 7vw;
 	text-align: center;
 	justify-content: center;
@@ -78,7 +77,7 @@
 	min-width: 100%;
 	padding-left: 11vw;
 	padding-right: 11vw;
-	background-color: rgb(153, 153, 153);
+	background-color: #1a3a5b;
 }
 
 .NavBarTr {
@@ -98,11 +97,12 @@
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-	background-color: rgb(153, 153, 153);
+	background-color: #1a3a5b;
+	color: white;
+	font-size: 1.4vw;
 }
 
 .NavBarUl:hover {
 
-	background-color: rgb(128, 128, 128);
+	background-color: #142c45;
 }
-
