--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,18 +1,17 @@
 .ProductCase {
     /* border: 1px solid black; */
     width: 15vw;
-    height: 24.5vw;
+    height: 100%;
     text-align: center;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: white;
-    box-shadow: 0 4px 10px 1px rgba(140, 140, 140, 1);
+    box-shadow: 0 4px 10px 1px rgb(0, 0, 0);
 }
 
 .ProductCase:hover {
 
-    box-shadow: 0 4px 10px 1px rgba(140, 140, 140, 1);
-    transform: translateY(-5px);
+    transform: translateY(-3px);
     transition-duration: .5s;
 }
 
@@ -25,10 +24,12 @@
 }
 
 .ProductName {
-    font-size: 1vw;
-    line-height: 1.125vw;
+    font-size: 1.2vw;
+    line-height: 1.3vw;
     font-weight: 600;
     margin-top: 0.5vw;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
     min-height: 2.4vw;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -43,7 +44,7 @@
     margin-top: 1vw;
     padding-left: 1vw;
     text-align: left;
-    min-height: 1.3vw;
+    min-height: 1.4vw;
     text-decoration-line: line-through;
 }
 
@@ -56,12 +57,17 @@
 
 .ProductBuyButton {
     margin-top: 0.4vw;
-    background-color: darkgrey;
-    font-size: 1vw;
+    background-color: #23486E;
+    color: white;
+    font-size: 1.4vw;
     line-height: 3vw;
     font-weight: 700;
     height: 3.1vw;
-    border-radius: 0px 0px 9px 9px;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.ProductBuyButton:hover {
+    background-color: #1A3A5B;
 }
 
 .ProductRollCase {
