--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,20 +7,19 @@ body {
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	height: 100%;
 	min-height: 100%;
+	background-color: #858a95;	
+	height: 100vh;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
+	color:white;
 }
 
 * {
 	box-sizing: border-box;
 	outline: none;
-}
-
-body {
-	background-color: #eeeeee
 }
 
 footer {
