--- a/styles/AccountInfo.module.css
+++ b/styles/AccountInfo.module.css
@@ -2,15 +2,15 @@
     align-self: center;
     align-items: center;
     display: flex;
-    width: 19vw;
+    width: 19rem;
     justify-content: flex-end;
     color:white;
-    font-size: 1.4vw;
+    font-size: 1.4rem;
 }
 
 .SeparatorBar {
-    margin-left: 1vw;
-    margin-right: 1vw;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .LoginBtn {
@@ -34,11 +34,11 @@
 .AccountBtn {
     align-self: center;
     display: flex;
-    margin-right: 1vw;
-    margin-left: 1vw;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .ProfileImg {
-    max-width: 4vw;
+    max-width: 4rem;
     border-radius: 50%
 }
