--- a/styles/EmailVerifyMessage.module.css
+++ b/styles/EmailVerifyMessage.module.css
@@ -2,19 +2,19 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    height: 20vw;
-    width: 32vw;
-    top: calc(50% - 10vw);
-    left: calc(50% - 16vw);
+    height: 20rem;
+    width: 32rem;
+    top: calc(50% - 10rem);
+    left: calc(50% - 16rem);
     background-color: rgb(199, 199, 199);
-    box-shadow: 10px 10px;
+    box-shadow: 1rem 1rem;
 }
 
 .Label {
-    font-size: 2vw;
+    font-size: 2rem;
     font-weight: 700;
-    line-height: 2vw;
-    margin: 1vw;
+    line-height: 2rem;
+    margin: 1rem;
     justify-content: center;
 }
 
@@ -22,8 +22,8 @@
     background-color: red;
     display: flex;
     flex-direction: row;
-    margin-top: 4.5vw;
-    height: 3.5vw;
+    margin-top: 4.5rem;
+    height: 3.5rem;
     align-items: stretch;
 }
 
@@ -33,9 +33,9 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    font-size: 1.3vw;
+    font-size: 1.3rem;
     font-weight: 500;
-    line-height: 1vw;
+    line-height: 1rem;
     cursor: pointer;
 }
 .Link:hover {
@@ -43,6 +43,6 @@
 }
 
 .LinkSeparator {
-    width: 2px;
+    width: 0.1rem;
     background-color:black;
 }
