--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,7 +7,7 @@
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-	height: 10vw;
+	height: 10rem;
 }
 
 .LogoA {
@@ -17,24 +17,24 @@
 .LogoIcon {
 	display: block;
 	align-self: center;
-	height: 2vw;
-	width: 19vw;
+	height: 2rem;
+	width: 19rem;
 }
 
 .SearchContainer {
 	display: flex;
-	margin-right: 5vw;
-	margin-left: 5vw;
+	margin-right: 5rem;
+	margin-left: 5rem;
 }
 
 .SearchInput {
-	width: 30vw;
-	height: 2.5vw;
+	width: 30rem;
+	height: 2.5rem;
 	align-self: center;
-	border-radius: 5px;
+	border-radius: 0.1rem;
 	border-style: none;
-	font-size: 1.3vw;
-	text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+	font-size: 1.3rem;
+	text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
 }
 
 .SearchBtn {
@@ -42,12 +42,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 2.5vw;
-	height: 2.5vw;
+	width: 2.5rem;
+	height: 2.5rem;
 	align-self: center;
-	border-radius: 5px;
+	border-radius: 0.1rem;
 	border-style: none;
-	margin-left: -2.5vw;
+	margin-left: -2.5rem;
 }
 
 .SearchBtn:hover {
@@ -63,20 +63,20 @@
 	display: flex;
 	min-width: 100%;
 	max-width: 100%;
-	height: 7vw;
+	height: 7rem;
 	text-align: center;
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-	padding-left: 11vw;
-	padding-right: 11vw;
+	padding-left: 11rem;
+	padding-right: 11rem;
 }
 
 .NavBar {
 	display: flex;
 	min-width: 100%;
-	padding-left: 11vw;
-	padding-right: 11vw;
+	padding-left: 11rem;
+	padding-right: 11rem;
 	background-color: #1a3a5b;
 }
 
@@ -86,7 +86,7 @@
 	align-items: stretch;
 	min-width: 100%;
 	flex-direction: row;
-	height: 3vw;
+	height: 3rem;
 }
 
 .NavBarUl {
@@ -99,7 +99,7 @@
 	align-items: center;
 	background-color: #1a3a5b;
 	color: white;
-	font-size: 1.4vw;
+	font-size: 1.4rem;
 }
 
 .NavBarUl:hover {
