--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .Body {
-	margin-left: 10vw;
-	margin-right: 10vw;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	min-height: calc(100vh - 25rem);
 }
