--- a/styles/InfinityLoading.module.css
+++ b/styles/InfinityLoading.module.css
@@ -16,7 +16,7 @@
     width: 3rem;
     height: 3rem;
     border-radius: 100%;
-    border: 6px solid #e5e5e5;
+    border: 0.3rem solid #e5e5e5;
     border-top-color: lightslategray;
 }
 
