--- a/styles/Produto.module.css
+++ b/styles/Produto.module.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
-    margin-top: 1.5vw;
+    margin-top: 1.5rem;
 }
 
 .Form {
@@ -13,28 +13,28 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    max-width: 35vw;
+    max-width: 35rem;
 }
 
 .ProfileImg {
-    border-radius: 50px
+    border-radius: 50
 }
 
 .Label {
     align-self: left;
-    font-size: 1.4vw;
+    font-size: 1.4rem;
 }
 
 .LabelCifra {
     display: flex;
     align-items: center;
-    font-size: 1.3vw;
+    font-size: 1.3rem;
     background-color: black;
     color: white;
-    border-radius: 5px 0px 0px 5px;
-    height: 2.5vw;
-    padding-left: 0.5vw;
-    padding-right: 0.5vw;
+    border-radius: 0.25rem 0 0 0.25rem;
+    height: 2.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .InputBox {
@@ -43,8 +43,8 @@
     align-items: baseline;
     max-width: 100%;
     max-height: 100%;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .InputMonetary {
@@ -56,36 +56,36 @@
 }
 
 .InputMonetary input {
-    border-radius: 0px 5px 5px 0px;
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 .Input {
-    width: 40vw;
-    height: 2.5vw;
+    width: 40rem;
+    height: 2.5rem;
     align-self: center;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     border-style: none;
-    font-size: 1.3vw;
+    font-size: 1.3rem;
     max-width: 100%;
     max-height: 100%;
 }
 
 .InputDescription {
-    width: 40vw;
+    width: 40rem;
     max-width: 100%;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     border-style: none;
-    font-size: 1.3vw;
+    font-size: 1.3rem;
     resize: none;
 }
 
 .InputImage {
-    width: 30vw;
-    height: 2.5vw;
+    width: 30rem;
+    height: 2.5rem;
     align-self: center;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     border-style: none;
-    font-size: 1.3vw;
+    font-size: 1.3rem;
     max-width: 100%;
     max-height: 100%;
 }
@@ -95,14 +95,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 5vw;
-    height: 3vw;
-    font-size: 1.1vw;
+    width: 5rem;
+    height: 3rem;
+    font-size: 1.1rem;
     align-self: center;
-    border-radius: 5px;
+    border-radius: 0.25rem;
     border-style: none;
-    margin-top: 1vw;
-    margin-bottom: 1vw;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     font-weight: 545;
 }
 
