--- a/styles/SearchPage.module.css
+++ b/styles/SearchPage.module.css
@@ -9,7 +9,7 @@
 
 .SearchContainer {
     background-color: rgb(255, 255, 255);
-    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: .1rem .1rem .25rem .1rem rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@
     width: 25rem;
     height: 100%;
     display: flex;
-    border-radius: 5px;
+    border-radius: .25rem;
     padding-bottom: 1rem;
 }
 
@@ -56,17 +56,17 @@
 .SearchContainer input {
     width: 80%;
     border: none;
-    border-bottom: solid 2px lightgrey;
+    border-bottom: solid .1rem lightgrey;
     background-color: white;
     color: black;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+    text-shadow: .1rem .1rem rgba(0, 0, 0, 0.1);
     font-size: 1.15rem;
     font-weight: bold;
     align-self: center;
 }
 
 .SearchContainer input:hover {
-    border-bottom: solid 2px black;
+    border-bottom: solid .1rem black;
 }
 
 .SearchContainer button {
@@ -78,12 +78,12 @@
     height: 2rem;
     font-size: 1.1rem;
     align-self: center;
-    border-radius: 5px;
+    border-radius: .25rem;
     border-style: none;
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-weight: 545;
-    text-shadow: 1px 1px #fff;
+    text-shadow: .1rem .1rem #fff;
 
 }
 
