--- a/styles/Produto.module.css
+++ b/styles/Produto.module.css
@@ -43,6 +43,7 @@
     align-items: baseline;
     max-width: 100%;
     max-height: 100%;
+    padding: 0.25rem;
     padding-left: 1rem;
     padding-right: 1rem;
 }
@@ -68,6 +69,7 @@
     font-size: 1.3rem;
     max-width: 100%;
     max-height: 100%;
+    padding-left: 0.5rem;
 }
 
 .InputDescription {
@@ -75,6 +77,7 @@
     max-width: 100%;
     border-radius: 0.25rem;
     border-style: none;
+    padding-left: 0.5rem;
     font-size: 1.3rem;
     resize: none;
 }
@@ -109,4 +112,14 @@
 .SubmitButton:hover {
     background-color: lightgray;
 
+}
+
+.QtdContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.QtdContainer .InputBox {
+    width: 17.5rem;
 }
