--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	min-height: 100vh;
-	background-color: #858a95;
+	background-color: #e6e6e6;
 	height: 100vh;
 }
 
