--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,8 @@ footer p:nth-child(2) {
 	padding-top: 2rem;
 	padding-bottom: 5rem;
 }
+
+#rcc-confirm-button:hover {
+	background: #142c45 !important;
+	color: white !important;
+}
