--- a/styles/Perfil.module.css
+++ b/styles/Perfil.module.css
@@ -9,25 +9,26 @@
 .Form {
     display: flex;
     flex-direction: column;
-    border: 1px solid;
     align-self: center;
     justify-content: center;
     align-items: center;
     align-content: center;
     max-width: 25rem;
-    background-color: rgb(165, 165, 165);
     border-radius: 0.25rem;
 }
 
 .ProfileImg {
-    border-radius: 50%
+    border-radius: 50%;
+    min-width: 6rem;
+    min-height: 6rem;
 }
 
 .Label {
     align-self: left;
 }
 
-.InputBox {
+.InputBox,
+.InputBoxBlock {
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -37,7 +38,7 @@
     padding-right: 1rem;
 }
 
-.InputBox input {
+.InputBox input:disabled {
     animation-duration: 1.8s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
@@ -58,7 +59,8 @@
     }
 }
 
-.Input {
+.Input,
+.InputLabel {
     width: 30rem;
     height: 2.5rem;
     align-self: center;
@@ -67,6 +69,12 @@
     font-size: 1.3rem;
     max-width: 100%;
     max-height: 100%;
+}
+
+.InputLabel {
+    background-color: rgb(200, 200, 200);
+    padding: 0px 4px 4px 3px;
+    color: rgb(70, 70, 70);
 }
 
 .SubmitButton {
@@ -88,4 +96,9 @@
 .SubmitButton:hover {
     background-color: lightgray;
 
+}
+
+.SubmitButton:disabled {
+    background-color: lightgray;
+    color: #8b8b8b
 }
