--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -63,7 +63,21 @@
     font-size: 2rem;
     margin-bottom: 0;
     text-shadow: .1rem .1rem rgba(0, 0, 0, 0.25);
+    font-weight: bold;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+}
 
+.Container input {
+    padding: 2px 0 0 0;
+    border: none;
+}
+
+.Container textarea {
+    padding: 2px 0 0 0;
+    border: none;
 }
 
 .CurrencyContainer {
