--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -70,9 +70,26 @@
     margin-block-end: 0.83em;
 }
 
-.Container input {
+.Container input,
+.UpperContainer input,
+.DescriptionContainer textarea {
     padding: 2px 0 0 0;
     border: none;
+    border-bottom: 3px solid black;
+    text-decoration-line: none;
+}
+
+.Container input {
+    max-width: 35rem;
+}
+
+.UpperContainer input {
+    width: 100%;
+}
+
+.DescriptionContainer textarea {
+    width: 100%;
+    height: 10rem;
 }
 
 .Container textarea {
@@ -118,7 +135,8 @@
 
 }
 
-.Buy {
+.Buy,
+.Save {
     background-color: #23486e;
     display: flex;
     align-items: center;
@@ -133,12 +151,16 @@
     font-weight: 600;
     text-shadow: .1rem .1rem rgba(0, 0, 0, 1);
     color: white;
-
 }
 
 .Buy:hover {
     background-color: #1a3a5b;
 
+}
+
+.Save {
+    margin-top: -3rem;
+    margin-bottom: 3rem;
 }
 
 .Controls {
