--- a/styles/EmailVerifyMessage.module.css
+++ b/styles/EmailVerifyMessage.module.css
@@ -1,3 +1,13 @@
+.ScreenBlock {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
 .Container {
     display: flex;
     position: absolute;
@@ -6,8 +16,8 @@
     width: 32rem;
     top: calc(50% - 10rem);
     left: calc(50% - 16rem);
-    background-color: rgb(199, 199, 199);
-    box-shadow: 1rem 1rem;
+    background-color: white;
+    box-shadow: 0 0.2rem 2rem 1rem rgb(0 0 0);
 }
 
 .Label {
@@ -29,7 +39,7 @@
 
 .Link {
     display: flex;
-    background-color: rgb(171, 171, 171);
+    background-color: #1a3a5b;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -37,12 +47,14 @@
     font-weight: 500;
     line-height: 1rem;
     cursor: pointer;
+    color: white;
 }
+
 .Link:hover {
-    background-color:rgb(143, 143, 143);
+    background-color: #142c45;
 }
 
 .LinkSeparator {
-    width: 0.1rem;
-    background-color:black;
+    width: 0.2rem;
+    background-color: black;
 }
