--- a/styles/Carrinho.module.css
+++ b/styles/Carrinho.module.css
@@ -18,6 +18,14 @@
     height: 100%;
 }
 
+
+.ImagesContainer {
+    display: flex;
+    width: 32rem;
+    overflow-x: auto;
+}
+
+
 .InfoContainer {
     padding: 0 1.5rem 0 1.5rem;
     width: 100%;
