--- a/styles/Carrinho.module.css
+++ b/styles/Carrinho.module.css
@@ -167,6 +167,7 @@
     background-color: rgb(199, 199, 199);
 }
 
-.Result h2{
-    padding-left: 4rem;
+.Result h1{
+    margin:0;
+    padding: 0;
 }
