--- a/styles/Compra.module.css
+++ b/styles/Compra.module.css
@@ -20,3 +20,29 @@
 .ResumeContainer {
     width: 40%;
 }
+
+.Result {
+    margin-left:10rem;
+    margin-right:10rem;
+    background-color: white;
+    box-shadow: 0 0 15px 0px black;
+    display: flex;
+    height: 5rem;
+    justify-content: space-around;
+}
+
+.Result button {
+    border: none;
+    width: 15rem;
+    height: 5rem;
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.Result button:hover {
+    background-color: rgb(199, 199, 199);
+}
+
+.Result h2{
+    padding-left: 4rem;
+}
